--- a/index.html
+++ b/index.html
@@ -25,4 +25,13 @@ head>
         <h2>Preparación</h2>
 
         <p>Se pican todos los elementos, se mezclan y listo</p>
+
+        <ol>
+            <li>Primero de adiciona la lechuga</li>
+            <li>se taja y añade el tomate</li>
+            <li>se taja y añade la cebolla en rodajas</li>
+            <li>por ultimo se añade el maiz y se mezcla </li>
+            <li>para mejorar el sabor se puede adcionar salsa soya o cualquier otra</li>
+        </ol>
+
     </body>
